jSymbolic.js : this[] context issue resolved

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<h1 align="center" style="display: none;">
+	<h1 align="center">
 		JSON
 	</h1>
 	<div id="jsonEditor">
 		
 	</div>
-	
 	<!--
 	<div class="json_editor">
   		<div class="json_init">
