--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 	<h1 align="center">
 		JSON Builder
 	</h1>
-	<div id="jsonEditor">
-		
-	</div>
+	<section class="container">
+		<div id="jsonEditor"><div class="stringify">Stringify This</div></div>
+		<div class="_block">
+			<span class="tl">JSON Result</span>
+			<pre class="result hide"></pre>
+		</div>
+	</section>
 	<!--
 	<div class="json_editor">
   		<div class="json_init">
@@ -118,5 +122,13 @@
 		</div>
 	</div>
 	-->
+	<section class="foot">
+		<div class="container">
+			<footer class="footer">
+				<div class="auth_info">Developed By <span class="aname">Yogesh Jagdale</span>
+				</div>
+			</footer>
+		</div>
+	</section>
 </body>
 </html>
