--- a/jsonbuilder/index.html
+++ b/jsonbuilder/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8"/>
-	<title>JSON Builder</title>
+	<title>jsonmaker.com - Create your JSON easily with {json:maker}</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="icon" href="images/json_icon2.png">
 	<script type="text/javascript" src="js/jSymbolic.js"></script>
 	<script type="text/javascript" src="js/jsonbuilder.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-	<h1 align="center">
-		JSON Builder
+	<h1 align="center" class="main-title">
+		{JSON : Maker}
 	</h1>
 	<section class="container">
 		<div id="jsonEditor"><div class="stringify">Stringify This</div></div>
@@ -125,7 +126,9 @@
 	<section class="foot">
 		<div class="container">
 			<footer class="footer">
-				<div class="auth_info">Developed By <span class="aname">Yogesh Jagdale</span>
+				<div class="auth_info">
+					Developed By <a class="aname" href="mailto:yog99mail@gmail.com">Yogesh Jagdale</a>
+					<span class="em">Copyright &copy; 2016 jsonmaker.com. All rights reserved.</span>
 				</div>
 			</footer>
 		</div>
