--- a/index.html
+++ b/index.html
@@ -4,134 +4,34 @@
 	<meta charset="UTF-8"/>
 	<title>jsonmaker.com - Create your JSON easily with {json:maker}</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="icon" href="images/json_icon2.png">
+	<link rel="icon" href="images/fav.png">
 	<script type="text/javascript" src="js/jSymbolic.js"></script>
 	<script type="text/javascript" src="js/jsonbuilder.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	<!--script>
+	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-	  ga('create', 'UA-75073079-1', 'auto');
-	  ga('send', 'pageview');
-</script>
+	  	ga('create', 'UA-75073079-1', 'auto');
+	  	ga('send', 'pageview');
+	</script-->
 </head>
 <body>
 	<h1 align="center" class="main-title">
 		{JSON : Maker}
 	</h1>
 	<section class="container">
-		<div id="jsonEditor"><div class="stringify">Stringify This</div></div>
+		<div id="jsonEditor"></div>
+		<button class="cmd stringify">Stringify this</button>
+		<button class="cmd log">Log to your console</button>
 		<div class="_block">
-			<span class="tl">JSON Result</span>
+			<span class="tl">JSON Stringify</span>
 			<pre class="result hide"></pre>
 		</div>
 	</section>
-	<!--
-	<div class="json_editor">
-  		<div class="json_init">
-  			JSON
-  			<div class="json_op">
-				<span class="op">{}</span><span class="op">[]</span>
-		  	</div>
-  		</div>
-	</div>
-	<div class="json_block iobj">
-		<div class="key_holder">
-			<div class="key_row">
-				<div class="key">Name</div>
-				<div class="val">"Yogesh"</div>
-			</div>
-			<div class="key_row">
-				<div class="key">
-					<input type="text" class="objtxt">
-				</div>
-				<div class="val">""</div>
-			</div>
-			<div class="key_row">
-				<div class="key">rows </div>
-				<div class="val">
-					<div class="json_block iobj">
-						<div class="key_holder">
-							<div class="key_row">
-								<div class="key">Name </div>
-								<div class="val">"Yogesh"</div>
-							</div>
-							<div class="key_row">
-								<div class="key">State</div>
-								<div class="val obj">
-									<div class="json_block iobj">
-										<div class="key_holder">
-											<div class="key_row">
-												<div class="key">"one"</div>
-												<div class="val">"Thane"</div>
-											</div>
-											<div class="key_row">
-												<div class="key">"two"</div>
-												<div class="val">"Mumbai"</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="key_row">
-								<div class="key">State</div>
-								<div class="val obj">
-									<div class="json_block iobj">
-										<div class="key_holder">
-											<div class="key_row">
-												<div class="key">"one"</div>
-												<div class="val">"Thane"</div>
-											</div>
-											<div class="key_row">
-												<div class="key">"two"</div>
-												<div class="val">"Mumbai"</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="key_row">
-								<div class="key">rows</div>
-								<div class="val">
-									<div class="json_block iarr">
-										<div class="key_holder">
-											<div class="key_row">
-												<div class="val">"city 1"</div>
-											</div>
-											<div class="key_row">
-												<div class="val">"city 2"</div>
-											</div>
-											<div class="key_row">
-												<div class="val">
-													<div class="json_block iobj">
-														<div class="key_holder">
-															<div class="key_row">
-																<div class="key">"reward"</div>
-																<div class="val">10</div>
-															</div>
-															<div class="key_row">
-																<div class="key">"bonus"</div>
-																<div class="val">50</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	-->
 	<section class="foot">
 		<div class="container">
 			<footer class="footer">
