--- a/jsonbuilder/index.html
+++ b/jsonbuilder/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8"/>
 	<title>jsonmaker.com - Create your JSON easily with {json:maker}</title>
+	<link rel="stylesheet" type="text/css" href="css/icon.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="images/fav.png">
 	<meta property="og:url"           content="http://www.jsonmaker.com/index.html" />
