--- a/jsonbuilder/index.html
+++ b/jsonbuilder/index.html
@@ -78,7 +78,7 @@
 		<button class="cmd log">> Log to your console</button>
 		<div class="_block">
 			<span class="tl">JSON Stringify</span>
-			<textarea class="result hide" readOnly></textarea>
+			<textarea readOnly spellcheck="false" class="result hide"></textarea>
 		</div>
 		<div class="fb_like">
 			<div class="fb-like" 
