--- a/jsonbuilder/index.html
+++ b/jsonbuilder/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8"/>
 	<title>jsonmaker.com - Create your JSON easily with {json:maker}</title>
 	<link rel="stylesheet" type="text/css" href="css/icon.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="icon" href="images/fav.png">
 	<meta property="og:url"           content="http://www.jsonmaker.com/index.html" />
@@ -73,17 +74,40 @@
 		</p>
 	</div>
 	<section class="container">
-		<div id="jsonEditor"></div>
-		<button class="cmd stringify">Stringify this</button>
-		<button class="cmd log">> Log to your console</button>
-		<div class="_block">
+		<div id="jsonEditor">
+			<button class="cmd new-json">Create New JSON</button>
+		</div>
+		
+		<div class="cmd-btn">
+			<div class="cmd-wrap">
+				<span class="dir-ico fa fa-long-arrow-down"></span>
+				<button class="cmd stringify">JSON to Stringify</button>
+				<span class="dir-ico fa fa-long-arrow-down"></span>
+			</div>
+			<div class="cmd-wrap">
+				<span class="dir-ico fa fa-long-arrow-up"></span>
+				<button class="cmd objectify">Stringify to JSON</button>
+				<span class="dir-ico fa fa-long-arrow-up"></span>
+			</div>
+			<div class="cmd-wrap">
+				<span class="dir-ico fa fa-long-arrow-down"></span>
+				<button class="cmd log">&gt;_ Log to your console</button>
+			</div>
+  		</div>
+		
+		<div class="_block result_pad">
 			<span class="tl">JSON Stringify</span>
-			<textarea readOnly spellcheck="false" class="result hide"></textarea>
+			<span class="parse_error hide"></span>
+			<textarea spellcheck="false" class="result hide"></textarea>
+			<p class="tip">
+				<span class="t-point">Create JSON and click on 'JSON to Stringify' button. </span>
+				<span class="t-point">Paste/Write JSON string in the above textbox and click on 'Stringify to JSON' button</span>
+			</p>
 		</div>
 		<div class="fb_like">
 			<div class="fb-like" 
 				data-href="http://www.jsonmaker.com" 
-				data-layout="box_count" 
+				data-layout="standard" 
 				data-action="like" 
 				data-show-faces="true" 
 				data-share="true"></div>
