--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" src="js/jsonbuilder.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	<script>
+	<!--script>
 	  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -24,7 +24,7 @@
 
 	  	ga('create', 'UA-75073079-1', 'auto');
 	  	ga('send', 'pageview');
-	</script>
+	</script-->
 	<script>
   window.fbAsyncInit = function() {
     FB.init({
