--- a/jsonbuilder/index.html
+++ b/jsonbuilder/index.html
@@ -58,6 +58,14 @@
   		<h1 class="main-title">
   			<a class="logo"></a>
   			<span class="lgsl">{JSON : Maker}</span>
+  			<ul class="menu">
+				<li class="active">
+					<a href="#">JSON Maker</a>
+  				</li>
+				<li>
+					<a href="REST/">REST API Client</a>
+  				</li>
+  			</ul>
 		</h1>
 	</div>
 	<div class="container" style="">
