--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 	<meta property="og:description"   content="Create your JSON easily with {json:maker}" />
 	<meta property="og:image"         content="http://www.jsonmaker.com/images/fb_logo.png" />
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-	<!--script type="text/javascript" src="js/jSymbolic.js"></script-->
-	<script type="text/javascript" src="js/jsonbuilder.js"></script>
+	<script type="text/javascript" src="js/jsonmaker.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<!--script>
