--- a/Gapi/index.html
+++ b/Gapi/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
     <script type="text/javascript" src="jquery-3.0.0.min.js"></script>
     <script type="text/javascript">
       // Your Client ID can be retrieved from your project in the Google
