--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:image" content="http://www.jsonmaker.com/images/fb_logo.png" />
 	<script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
 	<!--script type="text/javascript" src="js/jSymbolic.js"></script-->
-	<script type="text/javascript" src="js/jsonbuilder.js"></script>
+	<script type="text/javascript" src="js/jsonmaker.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<style type="text/css">
@@ -34,6 +34,37 @@
 	}
 	*/
 	</style>
+	<script>
+		if (location.host != "localhost") {
+			(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+			ga('create', 'UA-75073079-1', 'auto');
+			ga('send', 'pageview');
+		}
+	</script>
+	<script type="text/javascript">
+	if (location.host != "localhost") {
+		window.fbAsyncInit = function () {
+			FB.init({
+				appId: '908808245902696',
+				xfbml: true,
+				version: 'v2.5'
+			});
+		};
+		(function (d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
+			js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=908808245902696";
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	}
+	</script>
 </head>
 
 <body>
