added game button at top

--- a/website/index.html
+++ b/website/index.html
@@ -79,9 +79,7 @@
 			<a class="logo"></a>
 			<span class="lgsl">{JSON : Maker}</span>
 		</h1>
-		<div class="changeview">Change View
-			<span class="view-icon"></span>
-		</div>
+		<div class="extra-menu"><span class="ex-menu changeview"><i class="fa fa-th-list" aria-hidden="true"></i> Change View</span><i class="sep-menu"></i><span class="ex-menu play-game"><i class="fa fa-gamepad" aria-hidden="true"></i> Play Game</span></div>
 	</div>
 	<section class="container jsoneditor-container">
 		<p class="info hide">
