--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/icon.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" integrity="sha512-wnea99uKIC3TJF7v4eKk4Y+lMz2Mklv18+r4na2Gn1abDRPPOeef95xTzdwGD9e6zXJBteMIhZ1+68QC5byJZw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="icon" href="images/fav.png?">
 	<meta name="viewport" content="width=device-width" />
 	<meta name="keywords" content="json, json maker, json builder, json formatter, json generator, json editor" />
@@ -82,15 +83,6 @@
 		<div class="extra-menu"><span class="ex-menu changeview"><i class="fa fa-th-list" aria-hidden="true"></i> Change View</span><i class="sep-menu"></i><span class="ex-menu play-game"><i class="fa fa-gamepad" aria-hidden="true"></i> Play Game</span></div>
 	</div>
 	<section class="container jsoneditor-container">
-		<p class="info hide">
-			JSON (JavaScript Object Notation) is a lightweight data-interchange format. It is easy for humans to read and write. It is
-			easy for machines to parse and generate. It is based on a subset of the JavaScript Programming Language, Standard ECMA-262
-			3rd Edition - December 1999.
-			<br><br> JSON is a text format that is completely language independent but uses conventions that are familiar to programmers
-			of the C-family of languages, including C, C++, C#, Java, JavaScript, Perl, Python, and many others. These properties
-			make JSON an ideal data-interchange language.
-			<span class="ref">Referred from : http://www.json.org</span>
-		</p>
 		<div id="jsonEditor">
 			<div class="option-list">
 				<ul class="option-menu">
