--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 </head>
 
 <body>
-	<div class="container top-header">
+	<div class="wrap top-header">
 		<h1 class="main-title">
 			<a class="logo"></a>
 			<span class="lgsl">{JSON : Maker}</span>
 		</h1>
 		<div class="extra-menu"><span class="ex-menu changeview"><i class="fa fa-th-list" aria-hidden="true"></i> Change View</span><i class="sep-menu"></i><span class="ex-menu play-game"><i class="fa fa-gamepad" aria-hidden="true"></i> Play Game</span></div>
 	</div>
-	<section class="container jsoneditor-container">
+	<section class="wrap jsoneditor-container flex flex-col">
 		<div id="jsonEditor">
 			<div class="option-list">
 				<ul class="option-menu">
@@ -92,7 +92,8 @@
 				</ul>
 			</div>
 			<!--<button class="cmd new-json">Create New JSON</button>-->
-		</div><div class="cmd-btn">
+		</div>
+		<div class="cmd-btn">
 			<div class="cmd-wrap">
 				<span class="dir-ico fa fa-long-arrow-down"></span>
 				<span class="dir-ico fa fa-long-arrow-right"></span>
@@ -134,7 +135,7 @@
 			</p>
 		</div>
 	</section>
-	<section class="container contactus hide">
+	<section class="wrap contactus hide">
 		<h1>Contact
 			<span class="mypk"></span>Yogesh
 			<a class="linkedin" target="_blank" href="https://www.linkedin.com/in/YogeshJagdale">https://www.linkedin.com/in/YogeshJagdale</a>
