--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 		</div>
 	</section>
 	<section class="foot">
-		<div class="container">
+		<div class="wrap">
 			<footer class="footer">
 				<div class="auth_info">
 					Developed By <a class="aname" href="mailto:yog99mail@gmail.com">Yogesh Jagdale</a>
