fixed id #jsonEditor

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<div class="extra-menu"><span class="ex-menu changeview"><i class="fa fa-th-list" aria-hidden="true"></i> Change View</span><i class="sep-menu"></i><span class="ex-menu play-game"><i class="fa fa-gamepad" aria-hidden="true"></i> Play Game</span></div>
 	</div>
 	<section class="wrap jsoneditor-container flex flex-col">
-		<div id="jsonEditor rounded-md">
+		<div id="jsonEditor" class="rounded-md">
 			<div class="option-list">
 				<ul class="option-menu">
 					<li data-value="Create New Json" class="menu-item star-icon">Create New Json</li>
