--- a/index.html
+++ b/index.html
@@ -94,23 +94,24 @@
 			<!--<button class="cmd new-json">Create New JSON</button>-->
 		</div>
 		<div class="cmd-btn">
-			<div class="cmd-wrap">
+			<button class="cmd-wrap cmd rounded-md stringify">
 				<span class="dir-ico fa fa-long-arrow-down"></span>
 				<span class="dir-ico fa fa-long-arrow-right"></span>
-				<button class="cmd rounded-md stringify">JSON to Stringify</button>
+				JSON to Stringify
 				<span class="dir-ico fa fa-long-arrow-down"></span>
 				<span class="dir-ico fa fa-long-arrow-right"></span>
-			</div>
-			<div class="cmd-wrap">
+			</button>
+
+			<button class="cmd-wrap cmd rounded-md objectify">
 				<span class="dir-ico fa fa-long-arrow-up"></span>
 				<span class="dir-ico fa fa-long-arrow-left"></span>
-				<button class="cmd rounded-md objectify">Stringify to JSON</button>
+				Stringify to JSON
 				<span class="dir-ico fa fa-long-arrow-up"></span>
 				<span class="dir-ico fa fa-long-arrow-left"></span>
-			</div>
-			<div class="cmd-wrap">
-				<button class="cmd rounded-md log">&gt;_ Log to console</button>
-			</div>
+			</button>
+
+			<button class="cmd-wrap cmd rounded-md log">&gt;_ Log to console</button>
+
 			<div id="fb-root">
 				<div class="fb_like">
 					<div class="fb-like" data-href="http://www.jsonmaker.com" data-layout="box_count" data-action="like" data-show-faces="true"
