fixed download issue

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 				<span class="dir-ico fa fa-long-arrow-left"></span>
 			</button>
 
-			<button class="cmd-wrap cmd download__btn" download="jsonmaker.json">Download as (.json)</button>
+			<a class="hidden cmd-wrap cmd rounded-md download__btn" download="jsonmaker.json">Download as (.json)</a>
 
-			<button class="cmd-wrap cmd rounded-md log">&gt;_ Log to console</button>
+			<button class="cmd-wrap cmd rounded-md log">&gt;_ Log to Console</button>
 
 			<div id="fb-root">
 				<div class="fb_like">
